--- a/cfbcursos/Aulas/07_mapeando_links.html
+++ b/cfbcursos/Aulas/07_mapeando_links.html
@@ -20,7 +20,7 @@
         ="circle" -> circular;
         ="poly" -> Poligonal;
         ="default" -> padrão -->
-<!--Coords="" -> coodernadas. -->
+<!--Coords="" -> As coordenadas geográficas -->
 <!--href="" -> localiação do link. pode ser usadas outros parâmetros igual na tag <a> âncora -->
 <!-- alt="" -> texto alternativo, caso o link não abra no navegador.-->
 
@@ -34,5 +34,4 @@
         
         <area shape="circle" coords="510,210,50" href="https://www.ecycle.com.br/polo-norte/" target=“_blank” alt="Curiosidade e segredos do polo norte">
     </map>
-/body
-/
+</body>
