--- a/cfbcursos/Aulas/04_âncora.html
+++ b/cfbcursos/Aulas/04_âncora.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Âncora - a </title>
+    <title>Âncora &lt;a&gt; </title>
     <style>
         a {
             display: block; /* Mudei o display para quebrar a linha */
