--- a/cfbcursos/Aulas/06_informações_de_contato.html
+++ b/cfbcursos/Aulas/06_informações_de_contato.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações de Contato - adress</title>
+    <title>Informações de Contato &lt;adress&gt;</title>
 </head>
 <body>
 
 <!-- Informações de Contato - <address> -->
 <!-- display: block;-->
+
     <footer>        <!-- Usa-se a tag address preferencialmente dentro da tag de footer (rodapé) -->
     <address>
         Autor: Bruno P. Campos<br>
