--- a/cfbcursos/Aulas/07_mapeando_links.html
+++ b/cfbcursos/Aulas/07_mapeando_links.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapeando Links - map e area</title>
+    <title>Mapeando Links &lt;map&gt; e &lt;area&gt;</title>
 </head>
 <body>
     
