avançando nas aulas

--- a/cfbcursos/Aulas/02_parágrafo.html
+++ b/cfbcursos/Aulas/02_parágrafo.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     
-<!-- Parágrafo - <p> -->
-<!--display: block; -->
+<!-- Parágrafo - <p> == display: block;-->
 
     <p>CFB Cursos</p>
     <p>Curso de HTML Completo e Profissional</p>
