--- a/cfbcursos/Aulas/03_título.html
+++ b/cfbcursos/Aulas/03_título.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     
-<!-- título - h1, h2, h3, h4, h5, h6 -->
-<!-- Diplay: block; -->
+<!-- título - h1, h2, h3, h4, h5, h6 == diplay: block; -->
 
 <h1>Título da Página</h1>
     <h2>Título da Página</h2>
