--- a/cfbcursos/Aulas/04_âncora.html
+++ b/cfbcursos/Aulas/04_âncora.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     
-<!-- âncora/link - <a> -->
-<!-- Display: inline; -->
+<!-- âncora/link - <a> == display: inline;-->
 
 <!--navegando na mesma página-->
     <a href="#fim"id="topo">Início</a>
