--- a/cfbcursos/Aulas/05_abreviações.html
+++ b/cfbcursos/Aulas/05_abreviações.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<!-- Abreviações - <abbr>  -->
-<!-- display: inline; -->
+<!-- Abreviações - <abbr> == display: inline; -->
 
     <p>Curso de <abbr title="Hypertext markup language">HTML</abbr> Completo e Profissional do <abbr title="Canal Fessor Bruno">CFB</abbr> cusos</p>
     
