--- a/cfbcursos/Aulas/06_informações_de_contato.html
+++ b/cfbcursos/Aulas/06_informações_de_contato.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<!-- Informações de Contato - <address> -->
-<!-- display: block;-->
+<!-- Informações de Contato - <address> == display: block; -->
 
     <footer>        <!-- Usa-se a tag address preferencialmente dentro da tag de footer (rodapé) -->
     <address>
