--- a/cfbcursos/Aulas/07_mapeando_links.html
+++ b/cfbcursos/Aulas/07_mapeando_links.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     
-<!-- Mapeando Links - <map> e <area> -->
-<!-- diplay: none; -->
+<!-- Mapeando Links - <map> == diplay: none; | <area> == diplay: inline;-->
 <!-- A tag <map> deve ser usada com outras duas tags: <area> e <img>.
     <map> -> mapeia a imagem, tornando-a um link.
     <img> -> exibe a imagem que será usada para configurar como link.
@@ -24,7 +23,7 @@
 <!--href="" -> localiação do link. pode ser usadas outros parâmetros igual na tag <a> âncora -->
 <!-- alt="" -> texto alternativo, caso o link não abra no navegador.-->
 
-    <img src="imagens/mapabrasil.png" usemap="#mapaBrasil">
+    <img src="../imagens/mapabrasil.png" usemap="#mapaBrasil">
     <map name="mapaBrasil">
         <area shape="poly" coords="340,368,351,347,385,344,396,300,438,286,492,313,467,375,447,399,402,412,387,370,346,367" href="https://www.google.com/maps/place/Minas+Gerais/@-18.5246975,-49.9478505,6z/data=!3m1!4b1!4m5!3m4!1s0xa690a165324289:0x112170c9379de7b3!8m2!3d-17.930178!4d-43.7908453" target="_blank" alt="Minas Gerais">
 
