--- a/cfbcursos/Aulas/08_article_nova_semântica.html
+++ b/cfbcursos/Aulas/08_article_nova_semântica.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<!-- Seção independete no documento - <article> -->
-<!-- display: block; -->
+<!-- Seção independete no documento - <article> == display: block;-->
 
     <article>
         <h1>CFB Cursos</h1>
