--- a/cfbcursos/Aulas/09_aside_nova_semântica.html
+++ b/cfbcursos/Aulas/09_aside_nova_semântica.html
@@ -19,8 +19,7 @@
 </head>
 <body>
 
-<!-- Referencia o conteúdo principal que o cerca - <aside> -->
-<!-- display: block;-->
+<!-- Referencia o conteúdo principal que o cerca - <aside> == display: block; -->
 
     <aside class="esquerda">
         <a href="http://www.youtube.com/cfbcursos"></a>
