--- a/cfbcursos/Aulas/10_inserindo_música_e_sons.html
+++ b/cfbcursos/Aulas/10_inserindo_música_e_sons.html
@@ -8,15 +8,14 @@
 </head>
 <body>
 
-<!-- Incorporando conteúdo de som em um documento - <audio> 
+<!-- Incorporando conteúdo de som em um documento - <audio> == display: none;
     src="" -> especifica a url de áudio;
     autoplay -> inicia o áudio automáticamente;
     controls -> exibe os controles de áudio(play, pausa, etc.);
     muted -> mudo;
     loop -> áudio será repetido.
 -->    
-<!-- display: none; -->
 
-    <audio src="audios/themapanteracorderosa.mp3" autoplay preload="" controls ></audio>
+    <audio src="../audios/themapanteracorderosa.mp3" autoplay preload="" controls ></audio>
 </body>
 </html>
