--- a/cfbcursos/Aulas/12_apontamento_de_local_padrão.html
+++ b/cfbcursos/Aulas/12_apontamento_de_local_padrão.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="imagens/">
-
+    <base href="../imagens/">
     <title>Apontamento de Local Padrão &lt;base&gt;</title>
     <style>
         .foto {width: 200px;height: 200px;}
@@ -13,11 +12,10 @@
 </head>
 <body>
 
-<!-- destino para todos os urls relativos em um documento <base> 
+<!-- destino para todos os urls relativos em um documento <base> == display: none;
     href="" caminho da url;
     target="" local que será aberto.
 -->
-<!-- display: none; -->
     <img src="mapabrasil.png" class="foto"> <!-- não é preciso colocar o caminho inteiro. basta colocar o nome do arquivo que será procurado na href dito na tag base -->
     <img src="FB_IMG_1548515585861.jpg" class="foto">
     <img src="FB_IMG_1574416727806.jpg" class="foto">
@@ -28,8 +26,8 @@
     <img src="octocate microfone.png" class="foto">
     <img src="octocate violão.png" class="foto">
     <img src="perfil facebook.jpeg" class="foto">
-    <a href="../11_negrito.html">Sobre1</a><!-- Neste caso é preciso voltar à pasta anterior para o href não procurar na tag base -->
-    <a href="../11_negrito.html" target="_blank"> Sobre2</a> 
+    <a href="../aulas/11_negrito.html">Sobre1</a><!-- Neste caso é preciso voltar à pasta anterior para o href não procurar na tag base -->
+    <a href="../aulas/10_inserindo_música_e_sons.html" target="_blank"> Sobre2</a> 
 
 </body>
 </html>
