--- a/cfbcursos/Aulas/01_estrutura_básica.html
+++ b/cfbcursos/Aulas/01_estrutura_básica.html
@@ -9,7 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estrutura Básica</title><!-- barra de título-->
 </head>
-<body><!-- Corpo do documento-->
+<body>
+    
+<!-- Corpo do documento-->
     <h1>CFB cusos</h1>
     <p>Curso de HTML completo e Profissional</p>
 </body>
