--- a/cfbcursos/Aulas/02_parágrafo.html
+++ b/cfbcursos/Aulas/02_parágrafo.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-<!-- Parágrafo - <p> == display: block;-->
+<!-- <p> == display: block;
+    Parágrafo -->
 
     <p>CFB Cursos</p>
     <p>Curso de HTML Completo e Profissional</p>
