--- a/cfbcursos/Aulas/04_âncora.html
+++ b/cfbcursos/Aulas/04_âncora.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     
-<!-- âncora/link - <a> == display: inline;-->
+<!-- <a> == display: inline;
+    âncora/link -->
 
 <!--navegando na mesma página-->
     <a href="#fim"id="topo">Início</a>
@@ -30,6 +31,7 @@
     <a href="https://www.youtube.com/watch?v=9ByTCcGSIcw&list=PLx4x_zx8csUiVHRDO_7qhOaeNrrQ5uU8c&index=5" target="_blank">Curso de HTML5</a>
 
 <!--target="" -> diz ao navegador o local onde será aberto o link;
+
         target=“_self” -> (padrão)abre na mesma janela;
         target=“_blank” -> abre o link numa nova janela;
         target=“_parent” ->
@@ -37,6 +39,7 @@
         target=“framename” ->
 -->
 <!--rel="" -> especifica o tipo do link/o tipo de relacionamento entre o documento e o recurso vinculado;
+
         rel= "alternate	” -> fornece um link para um apresentação alternativa do documento(por exemplo, imprimir página, traduzida ou espelhada;
         rel= “author” -> fornece um link para o autor do documento;
         rel= “bookmark” -> url permanente usado para bookmarking;
@@ -66,6 +69,7 @@
 <!--hreflang-> indica o idioma da página que está sendo chamado;
 -->
 <!--type="" -> indica que tipo de conteúdo tem na codificação da página.
+    
         no link encontra-se todas as informações dos types: https://www.iana.org/assignments/media-types/media-types.xhtml
 -->
     <a href="https://www.youtube.com/watch?v=9ByTCcGSIcw&list=PLx4x_zx8csUiVHRDO_7qhOaeNrrQ5uU8c&index=5" target="_blank" rel="external" media="all" hreflang="pt" tyoe="text/html">Curso de HTML5</a>
