--- a/cfbcursos/Aulas/05_abreviações.html
+++ b/cfbcursos/Aulas/05_abreviações.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<!-- Abreviações - <abbr> == display: inline; -->
+<!-- <abbr> == display: inline;
+    Abreviações -->
 
     <p>Curso de <abbr title="Hypertext markup language">HTML</abbr> Completo e Profissional do <abbr title="Canal Fessor Bruno">CFB</abbr> cusos</p>
     
