--- a/cfbcursos/Aulas/07_mapeando_links.html
+++ b/cfbcursos/Aulas/07_mapeando_links.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     
-<!-- Mapeando Links - <map> == diplay: none; | <area> == diplay: inline;-->
+<!-- <map> == diplay: none;
+    Mapeando Links -->
+<!-- <area> == diplay: inline;
+    define uma área(clicável) dentro de um mapa de imagem -->
 <!-- A tag <map> deve ser usada com outras duas tags: <area> e <img>.
+
     <map> -> mapeia a imagem, tornando-a um link.
     <img> -> exibe a imagem que será usada para configurar como link.
     <area> -> define as coodernadas/dimensão do link.-->
 <!--Parametro da tag <area>-->
 <!-- shape="" -> define a forma da imagem:
+    
         ="rect" -> retângular;
         ="circle" -> circular;
         ="poly" -> Poligonal;
