--- a/cfbcursos/Aulas/08_article_nova_semântica.html
+++ b/cfbcursos/Aulas/08_article_nova_semântica.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<!-- Seção independete no documento - <article> == display: block;-->
+<!-- <article> == display: block;
+    Seção independete no documento -->
 
     <article>
         <h1>CFB Cursos</h1>
