--- a/cfbcursos/Aulas/10_inserindo_música_e_sons.html
+++ b/cfbcursos/Aulas/10_inserindo_música_e_sons.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<!-- Incorporando conteúdo de som em um documento - <audio> == display: none;
+<!-- <audio> == display: none;
+    Incorporando conteúdo de som em um documento
+
     src="" -> especifica a url de áudio;
     autoplay -> inicia o áudio automáticamente;
     controls -> exibe os controles de áudio(play, pausa, etc.);
