--- a/cfbcursos/Aulas/12_apontamento_de_local_padrão.html
+++ b/cfbcursos/Aulas/12_apontamento_de_local_padrão.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 
-<!-- destino para todos os urls relativos em um documento <base> == display: none;
+<!-- <base> == display: none;
+    destino para todos os urls relativos em um documento.
+     
     href="" caminho da url;
     target="" local que será aberto.
 -->
