--- a/cfbcursos/aulas/13_direção_do_texto.html
+++ b/cfbcursos/aulas/13_direção_do_texto.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<!-- direção do texto <bdo> == display: inline; 
+<!-- <bdo> == display: inline;
+    Direção do texto.
+     
     dir="" direção 
     dir="ltr" -> da esquerda para direita;
     dir="rtl" -> da direita para esquerda;
