--- a/cfbcursos/aulas/14_citações.html
+++ b/cfbcursos/aulas/14_citações.html
@@ -10,9 +10,14 @@
     </style>
 </head>
 <body>
-<!-- Especifica uma seção citada de outra fonte <blockquote> == display:block; | <cite> == display: inline;
+<!-- <blockquote> == display:block;
+    Especifica uma seção citada de outra fonte.
+
         cite="" -> especifica a url fonte da citação 
-obs.: -> cite pode ser um atributo dentro da tag blockquote, mas também pode ser usado como uma tag individual dentro do blockquote. -->
+-->
+<!-- <cite> == display: inline;
+    Representa uma referência a um trabalho artístico -->
+<!-- obs.: -> cite pode ser um atributo dentro da tag blockquote, mas também pode ser usado como uma tag individual dentro do blockquote -->
     <article>
         <p>Aqui no CFB Cursos você econtra uma excelente playlist sobre programação C++.</p>
         <blockquote cite="">
