--- a/cfbcursos/aulas/15_quebra_de_linha.html
+++ b/cfbcursos/aulas/15_quebra_de_linha.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-<!-- Quebra de Linha <bbr> == display: inline; 
+<!-- <bbr> == display: inline;
+    Quebra de Linha  
+    
     tag bbr é indicado quebra em poemas ou address e semelhantes -->
     <h1>Pontinho de Vista – Pedro Bandeira</h1>
     <p>Eu sou pequeno, me dizem,<br>
