--- a/cfbcursos/aulas/16_botão.html
+++ b/cfbcursos/aulas/16_botão.html
@@ -28,7 +28,9 @@
     </style>
 </head>
 <body>
-<!-- botão clicável <button> == display: inline; 
+<!-- <button> == display: inline;
+    Botão clicável.
+     
     type="" -> tipo de botão;
         ="submit" -> envio de dados;
         ="reset" -> limpa os dados;
