--- a/cfbcursos/aulas/17_gráficos.html
+++ b/cfbcursos/aulas/17_gráficos.html
@@ -18,7 +18,9 @@
 </head>
 <body>
 
-<!-- Desenhar gráficos - <canvas> == display: block;
+<!-- <canvas> == display: block;
+    Desenhar gráficos.
+    
     id="" -> identificador;
     width="" -> largura;
     height="" -> altura -->
