--- a/cfbcursos/aulas/18_código_e_pré-formato.html
+++ b/cfbcursos/aulas/18_código_e_pré-formato.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 
-<!-- Define um pedaço de código de computador. O conteúdo é exibido com fonte monoespaçada - <code> == diplay: inline; -->
-<!-- Define um texto pré-formatado - <pre> == display: block; -->
+<!-- <code> == diplay: inline; 
+    Define um pedaço de código de computador. O conteúdo é exibido com fonte monoespaçada -->
+<!-- <pre> == display: block;
+    Define um texto pré-formatado -->
 <code>
 <pre>
 <p>O conteúdo abaixo foi o primeiro exercício de PHP feito no Curso em Vídeo</p>
