--- a/cfbcursos/Aulas/06_informações_de_contato.html
+++ b/cfbcursos/Aulas/06_informações_de_contato.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<!-- Informações de Contato - <address> == display: block; -->
+<!-- <address> == display: block;
+    Informações de Contato -->
 
     <footer>        <!-- Usa-se a tag address preferencialmente dentro da tag de footer (rodapé) -->
     <address>
