--- a/cfbcursos/Aulas/11_negrito.html
+++ b/cfbcursos/Aulas/11_negrito.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<!-- Negrito <b> == display: inline;-->
+<!-- <b> == display: inline;
+    Negrito -->
     <article>
         <h1>Descrição</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa nisi laborum mollitia porro, ut, pariatur laboriosam at deserunt voluptatibus natus quisquam modi, nostrum corporis? Quas, fugit. Officiis, labore ab!</p>
