--- a/myprojecthtml/google.com/google.html
+++ b/myprojecthtml/google.com/google.html
@@ -5,27 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/menu.css">
+    <link rel="stylesheet" href="estilos/fotogoogle.css">
+    <link rel="stylesheet" href="estilos/search.css">
 </head>
 <body>
-
     <header>
         <nav class="menu">
-            <ul>
-                <li><a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
-                <li><a href="https://www.google.com.br/imghp?hl=pt-PT&ogbl">Imagens</a></li>
-                <aside> 
-                    <li><a class="pontinho" href="#">pontinhos</a></li>
-                </aside>
-                <li><a href="https://accounts.google.com/SignOutOptions?hl=pt-PT&continue=https://www.google.com.br/"><img class="ciclephoto" src="imagens/unnamed(1).png" alt="conta do google"></a></li>
+            <ul class="lista1">
+                <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></li>
+                <li><a href="https://www.google.com.br/imghp?hl=pt-BR&ogbl">Imagens</a></li>
+            </ul>
+            <ul class="lista2">
+                <li><a href="#"><abbr title="Google Apps"><img src="imagens/menu1.png" alt="Menu de navegação"></abbr></a></li>
+                <li><a href="#"><abbr title="Conta do Google rsDEValentim rsdriver1000@gmail.com"><img src="imagens/perfil.png" alt="Foto de Perfil Google"></abbr></a></li>
             </ul>
         </nav>
-        <div class="google">
-            <img src="imagens/google.png"  alt="logo-google">
-        </div>
-   </header>
+    </header>
+    <main>
+        <div class="fotogoogle"><img src="imagens/google.png" alt="Foto Google"></div>
+        <nav class="search">
+            <div class="pesquisar">   
+                <div class="lupa" ><img src="imagens/lupa.png" alt="Lupa de Pesquisa"></div>
+                <div class="input"><input type="search"></div>
+                <div class="teclado"><abbr title="Ferramenta de inserção de texto"><img src="imagens/teclado.png" alt="Teclado" ></abbr></div>
+                <div class="microfone"><abbr title="Pesquisar por voz"><img src="imagens/microfone.png" alt="microfone" ></abbr></div>
+            </div>
+            <div class="botão">
+                <button type="button">Pesquisar Google</button>
+                <button type="button">Estou com sorte</button>
+            </div>
 
+        </nav>
+    </main>
 
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
