--- a/cfbcursos/Aulas/04_âncora.html
+++ b/cfbcursos/Aulas/04_âncora.html
@@ -72,7 +72,7 @@
     
         no link encontra-se todas as informações dos types: https://www.iana.org/assignments/media-types/media-types.xhtml
 -->
-    <a href="https://www.youtube.com/watch?v=9ByTCcGSIcw&list=PLx4x_zx8csUiVHRDO_7qhOaeNrrQ5uU8c&index=5" target="_blank" rel="external" media="all" hreflang="pt" tyoe="text/html">Curso de HTML5</a>
+    <a href="https://www.youtube.com/watch?v=9ByTCcGSIcw&list=PLx4x_zx8csUiVHRDO_7qhOaeNrrQ5uU8c&index=5" target="_blank" rel="external" media="all" hreflang="pt" type="text/html">Curso de HTML5</a>
     
 <!--download ->  prepara o browser indicando que é um link de download.-->
     <a href="imagens/foto.zip" download="imagens">Download do Doc</a>
