--- a/cfbcursos/aulas/15_quebra_de_linha.html
+++ b/cfbcursos/aulas/15_quebra_de_linha.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- <bbr> == display: inline;
+<!-- <br> == display: inline;
     Quebra de Linha  
     
     tag bbr é indicado quebra em poemas ou address e semelhantes -->
